# Vision_Geometry

./: CMakeLists.txt  README.md  ReadMe.md  make.sh  run.sh
examples/: cur_lidar_scan.txt  lidar_map.txt  lidar_scan.txt  ref_lidar_scan.txt
include/: perspectiveNPoint.cpp
src/: CMakeLists.txt  geometry_epipolar.cpp  geometry_epipolar.h  geometry_epipolar_eight_points.cpp  geometry_epipolar_five_points.cpp  geometry_essential_eight_points.cpp  geometry_essential_five_points.cpp  geometry_pnp.cpp  geometry_pnp.h  geometry_triangulation.cpp  geometry_triangulation.h  main.cpp
src/epipolar/: CMakeLists.txt  geometry_epipolar.cpp  geometry_epipolar.h  geometry_essential_eight_points.cpp  geometry_essential_five_points.cpp
src/iterative_closest_point/: CMakeLists.txt  geometry_icp.cpp  geometry_icp.h  geometry_icp_point_to_line.cpp  geometry_icp_point_to_plane.cpp  geometry_icp_point_to_point.cpp
src/line_triangulator/: CMakeLists.txt  line_triangulator.cpp  line_triangulator.h
src/normal_distribution_transform/: CMakeLists.txt  geometry_ndt.cpp  geometry_ndt.h
src/perspective_n_point/: CMakeLists.txt  geometry_pnp.cpp  geometry_pnp.h  geometry_pnp_advance.cpp
src/point_triangulator/: CMakeLists.txt  point_triangulator.cpp  point_triangulator.h
src/relative_rotation/: CMakeLists.txt  eigen_optimization_functor.h  relative_rotation.cpp  relative_rotation.h
src/triangulation/: CMakeLists.txt  geometry_triangulation.cpp  geometry_triangulation.h  geometry_triangulation_line.cpp  geometry_triangulation_point.cpp
stash/: trianglation.cpp
test/: test_epipolar.cpp  test_icp.cpp  test_line_triangulator.cpp  test_ndt.cpp  test_pnp.cpp  test_point_triangulator.cpp  test_relative_rotation.cpp  test_triangulation.cpp
